--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
       <nav>
         <ul>
           <li><a href="#student-info">INFO</a></li>
-          <li><a href="#html-questions">HTML</a></li>
-          <li><a href="#css-questions">CSS</a></li>
+          <li><a href="#html-questions">Early Liberian History Questions</a></li>
+          <li><a href="#css-questions">Post War Liberian History Questions</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <form method="post" action="https://freecodecamp.org/practice-project/accessibility-quiz">
         <section role="region" aria-labelledby="student-info">
-          <h2 id="student-info">Student Info</h2>
+          <h2 id="student-info">Personal Information</h2>
           <div class="info">
             <label for="student-name">Name:</label>
             <input type="text" name="student-name" id="student-name" />
